fiz melhor o css fazendo a estetica da pagina e ajustei uma parte do html que situei como type inves de class

--- a/trabalho-site/styles.css
+++ b/trabalho-site/styles.css
@@ -8,25 +8,15 @@
     font-family: "Poppins", sans-serif;
 }
 
-
-.image-display {
-    width: 100%;
-    /* Mantém a proporção da imagem (16:9) */
-    padding-top: 56.25%; /* 9 / 16 * 100% */
-    background-size: cover;
-    background-position: center;
-    border-radius: 16px;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.1);
-    transition: background-image 0.3s;
-}
-
-
 body {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url(./img/Transformando_Noite_em_Dia_em_Vídeo\ -\ frame\ at\ 0m7s.JPG);
+
+    background-image: url(./img/tema-claro.png);
+    background-size: cover;
+    background-position: center;
     
     color: #111827; 
 }
@@ -37,10 +27,114 @@ body {
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background-image: url(./img/6293645.jpg);
+
+        background-image: url(./img/tema-escuro.JPG);
         background-size: cover;
         background-position: center;
+
         color: #f3f4f6;
 
     }
+}
+
+.container{
+    width: 420px;
+    background-color: transparent;
+    border: solid 2px rgba(225 , 225 , 225 , .2);
+    border-radius: 10px;
+    color: white;
+    padding: 30px 40px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+}
+
+.container h1{
+    font-size: 36px;
+    text-align: center;
+}
+
+.input-button{
+    position: relative;
+    width: 100%;
+    height: 50px;
+    margin: 30px 0;
+}
+
+.input-button input{
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    border: 2px solid rgba(225 , 225 , 225 , .2);
+    color: #f3f4f6;
+    outline: none;
+    font-size: 16px;
+    padding: 20px 45px 20px 20px;
+    border-radius: 40px;
+}
+
+.input-button input::placeholder{
+    color: #c5c5c5;
+}
+
+.input-button i{
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
+}
+
+.remember-forgot{
+    display: flex;
+    justify-content: space-between;
+    margin: -15px 0 15px;
+}
+
+.remember-forgot label input {
+    accent-color: white;
+    margin-right: 5px;
+
+}
+
+.remember-forgot a{
+    text-decoration: none;
+    color: white;
+}
+
+.remember-forgot a:hover{
+    text-decoration: underline;
+}
+
+.Login{
+    width: 100%;
+    height: 50px;
+    border: none;
+    background-color: rgb(7, 7, 7);
+    border-radius: 40px;
+    cursor: pointer;
+    font-size: 16px;
+    color: #c5c5c5;
+    font-weight: 600px;
+    margin-top: 20px;
+}
+
+.Login:hover{
+    background-color: transparent;
+    color: white;
+    border: 2px solid rgba(225 , 225 , 225 , .2);
+    transition: 0.5s;
+}
+
+.registrar-link {
+    font-size: 14px;
+    text-align: center;
+    margin: 20px 0 15px;
+}
+
+.registrar-link a{
+    text-decoration: none;
+    color: white;
+}
+
+.registrar-link     a:hover{
+    text-decoration: underline;
 }
